target story id

--- a/.maestro/visual_regression.yaml
+++ b/.maestro/visual_regression.yaml
@@ -7,6 +7,6 @@ appId: com.anonymous.VisualRegression
         kind: MyButton
         name: Another Example
 - assertVisible:
-    id: "addon-backgrounds-container"
+    id: mybutton--another-example
 - takeScreenshot: MyButton-AnotherExample
   
