--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "tsc --watch",
     "build": "tsup",
+    "build:watch": "tsup --watch",
     "vr": "tsx ./src/index.ts"
   },
   "bin": {
