--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "1.0.0",
   "description": "Visual Regression for React Native",
   "main": "./dist/index.js",
-"module": "./dist/index.mjs",
-"types": "./dist/index.d.ts",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "tsc --watch",
     "build": "tsup",
     "build:watch": "tsup --watch",
-    "vr": "tsx ./src/index.ts"
+    "postinstall": "node dist/postinstall.js"
   },
   "bin": {
     "rn-vr": "./rn-vr.js"
@@ -27,7 +27,6 @@
   "dependencies": {
     "arg": "^5.0.2",
     "pixelmatch": "^6.0.0",
-    "pngjs": "^7.0.0",
-    "tsx": "^4.17.0"
+    "pngjs": "^7.0.0"
   }
 }
