--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "tsc --watch",
     "build": "tsup",
-    "build:watch": "tsup --watch",
-    "postinstall": "node dist/postinstall.js"
+    "build:watch": "tsup --watch"
   },
   "bin": {
     "rn-vr": "./rn-vr.js"
