--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-native-visual-regression",
+  "name": "@powala/react-native-visual-regression",
   "version": "1.0.0",
-  "description": "Visual Regression for React Native",
+  "description": "Visual Regression for React Native using Storybook",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -9,19 +9,27 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "tsc --watch",
     "build": "tsup",
-    "build:watch": "tsup --watch"
+    "build:watch": "tsup --watch",
+    "lint": "npx eslint src/**/*.ts"
   },
   "bin": {
     "rn-vr": "./rn-vr.js"
   },
-  "author": "",
+  "author": "Lukasz Kowal",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.9.1",
     "@types/node": "^22.5.0",
     "@types/pixelmatch": "^5.2.6",
     "@types/pngjs": "^6.0.5",
+    "eslint": "^9.9.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^15.9.0",
+    "prettier": "3.3.3",
     "tsup": "^8.2.4",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.2.0"
   },
   "dependencies": {
     "arg": "^5.0.2",
